# wallet_work

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: .env.example  alembic.ini  create_table.py  database.py  load_test.js  main.py  models.py  routers.py  schemas.py  services.py  settings.py  tests_router.py
src/alembic/versions/: c4eae01bcf02_добавление_модели.py
