[tool.poetry]
name = "wallet-test-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.3"
uvicorn = "^0.32.0"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.36"
router = "^0.1"
pydantic-settings = "^2.6.0"
pytest = "^8.3.3"
httpx = "^0.27.2"
alembic = "^1.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
